syntax = "proto3";
package kuchain.x.evidence.v1;

option go_package            = "github.com/KuChainNetwork/kuchain/x/evidence/types";
option (gogoproto.equal_all) = true;

import "third_party/proto/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "third_party/proto/cosmos-proto/cosmos.proto";
import "chain/types/types.proto";

// MsgSubmitEvidenceBase defines an sdk.Msg type that supports submitting arbitrary
// Evidence.
//
// Note, this message type provides the basis for which a true MsgSubmitEvidence
// can be constructed. Since the evidence submitted in the message can be arbitrary,
// assuming it fulfills the Evidence interface, it must be defined at the
// application-level and extend MsgSubmitEvidenceBase.
message MsgSubmitEvidenceBase {
  kuchain.chain.types.v1.AccountID  submitter = 1 [
    (gogoproto.nullable) = false,
     (gogoproto.moretags) = "yaml:\"submitter\""
  ];
}

// Equivocation implements the Evidence interface and defines evidence of double
// signing misbehavior.
message Equivocation {
  option (gogoproto.goproto_stringer) = false;
  option (gogoproto.goproto_getters)  = false;

  int64                     height            = 1;
  google.protobuf.Timestamp time              = 2 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  int64                     power             = 3;
  bytes                     consensus_address = 4 [
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.ConsAddress",
    (gogoproto.moretags) = "yaml:\"consensus_address\""
  ];
}

// Params defines the total set of parameters for the evidence module
message Params {
  option (gogoproto.goproto_stringer) = false;

  google.protobuf.Duration max_evidence_age = 1 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags)    = "yaml:\"max_evidence_age\""
  ];

    google.protobuf.Duration double_sign_jail_duration = 2 [
    (gogoproto.nullable)    = false,
    (gogoproto.stdduration) = true,
    (gogoproto.moretags)    = "yaml:\"double_sign_jail_duration\""
  ];
}

// Evidence defines the application-level allowed Evidence to be submitted via a
// MsgSubmitEvidence message.
message Evidence {
  option (gogoproto.equal)             = true;
  option (cosmos_proto.interface_type) = "github.com/cosmos/cosmos-sdk/x/evidence/exported.Evidence";

  // sum defines a set of all acceptable concrete Evidence implementations.
  oneof sum {
    kuchain.x.evidence.v1.Equivocation equivocation = 1;
  }
}

// MsgSubmitEvidence defines the application-level message type for handling
// evidence submission.
message MsgSubmitEvidence {
  option (gogoproto.equal)           = true;
  option (gogoproto.goproto_getters) = false;

  Evidence                                       evidence = 1;
  kuchain.x.evidence.v1.MsgSubmitEvidenceBase base     = 2 [(gogoproto.nullable) = false, (gogoproto.embed) = true];
}
